--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,6 @@ body
 <td>
   
  <a href="Screenshot_20240904-130612_KMPlayer.jpg" target="_blank"><a/>
-   
 </td>
 
 
@@ -20,3 +19,5 @@ body
 
   
 </table>
+ </body>
+ </html>
