--- a/Index.html
+++ b/Index.html
@@ -4,22 +4,16 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="styles.css")
-body
-<table>
-<tr>
-<td>
-  
- <a href="Screenshot_20240904-130612_KMPlayer.jpg" target="_blank"><a/>
-</td>
-
-
-  
-</tr>
-<h1>
-  drfvy
-</h1>
-
-  
-</table>
- </body>
+<body>
+  <div class="container">
+    <div class="background-color">
+      <a href="images (2).jpeg" target="_blank">
+        <img src="images (2).jpeg" class="image-small" alt="Image 1">
+      </a>
+      <a href="download (3).jpeg" target="_blank">
+     <img src="download (3).jpeg" class="image-small" alt="Image 2">
+      </a>
+    </div>
+  </div>
+</body>
  </html>
