--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,17 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="styles.css")
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>Your Website</title>
+</head>
 <body>
-  <div class="container">
-    <div class="background-color">
-      <a href="images (2).jpeg" target="_blank">
-        <img src="images (2).jpeg" class="image-small" alt="Image 1">
-      </a>
-      <a href="download (3).jpeg" target="_blank">
-     <img src="download (3).jpeg" class="image-small" alt="Image 2">
-      </a>
+    <div class="container">
+        <div class="background-box">
+            <img src="images (2).jpeg" alt="Image 1" class="image" onclick="window.open('image1.jpg')"> <!-- Replace with your image URL -->
+            <img src="download (3).jpeg" alt="Image 2" class="image" onclick="window.open('image2.jpg')"> <!-- Replace with your image URL -->
+        </div>
     </div>
-  </div>
 </body>
- </html>
+</html>
